# k30e0022b8-a79a-439e-878b-dfd93eb8cd67

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: add_new_device_service.py  list_scheduled_content_service.py  list_supported_peripherals_service.py  server.py  update_content_schedule_service.py  user_login_service.py  user_logout_service.py
